# rmempty

./: .gitignore  LICENSE  README.md  pyproject.toml  rmempty.py  setup.py  test_rmempty.py
.github/workflows/: python-package.yml
rmempty/: __main__.py
