[tool.poetry]
name = "rmempty"
version = "1.0.0"
description = "Remove empty directories from a directory tree"
authors = ["st0rm <inthishouseofcards@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
