[project]
name = "rmempty"
version = "1.1.5"
description = "Removes empty directories from a directory tree."
authors = [{ name = "frosty", email = "inthishouseofcards@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["click>=8.1.7"]

[project.scripts]
rmempty = "rmempty.__main__:cli"

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "E",   # pycodestyle Error
    "W",   # pycodestyle Warning
    "I",   # isort
    "N",   # pep8-naming
    "Q",   # flake8-quotes
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
